# bird-server

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
bird-chat/: Cargo.toml
bird-chat/src/: color.rs  component.rs  identifier.rs  lib.rs
bird-data/: Cargo.toml
bird-data-gen/: Cargo.toml
bird-data-gen/src/: biomes.rs  blocks.rs  items.rs  lib.rs  materials.rs
bird-data/src/: identifier.rs  lib.rs  material.rs
bird-protocol/: Cargo.toml
bird-protocol-macro/: Cargo.toml
bird-protocol-macro/src/: lib.rs  nbt.rs  packet.rs  readable.rs  shared.rs  size.rs  writable.rs
bird-protocol-versions/: Cargo.toml
bird-protocol-versions/src/: lib.rs
bird-protocol/src/: impls.rs  lib.rs  nbt.rs  pub_impls.rs  std_impls.rs  stdimpls.rs
bird-server/: Cargo.toml
bird-server/src/: data.rs  main.rs  nbt.rs  protocol.rs
bird-util/: Cargo.toml
bird-util/src/: lib.rs
src/: main.rs
