[package]
name = "bird-chat"
version = "0.1.0"
edition = "2021"

[dependencies.either]
version = "1.8.0"
features = ["serde"]

[dependencies.uuid]
version = "1.2.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.thiserror]
version = "1.0.37"

[dev-dependencies.serde_json]
version = "1.0.87"