[package]
name = "bird-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.37"
anyhow = "1.0.66"
serde = "1.0.147"
serde_json = "1.0.87"
bird-protocol-macro = { path = "../bird-protocol-macro", optional = true }
fastnbt = { version = "2.3.2", optional = true }

[features]
derive = ["dep:bird-protocol-macro"]
fastnbt = ["dep:fastnbt"]