[package]
name = "bird-protocol"
version = "0.1.0"
edition = "2021"

[dependencies.thiserror]
version = "1.0.37"

[dependencies.anyhow]
version = "1.0.66"

[dependencies.serde]
version = "1.0.147"

[dependencies.serde_json]
version = "1.0.89"

[dependencies.bird-protocol-macro]
path = "../bird-protocol-macro"
optional = true

[dependencies.fastnbt]
version = "2.3.2"
optional = true

[dependencies.uuid]
version = "1.2.2"

[dependencies.bird-chat]
path = "../bird-chat"

[dependencies.euclid]
version = "0.22.7"
optional = true

[dependencies.bird-util]
path = "../bird-util"

[features]
derive = ["dep:bird-protocol-macro"]
fastnbt = ["dep:fastnbt"]
euclid = ["dep:euclid"]